@@ -382,9 +382,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.21.0</version>
+				<version>2.19.1</version>
 				<configuration>
-					<argLine>${jacocoArgs} -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:-UseSplitVerifier</argLine>
+					<argLine>${jacocoArgs} -Xms512m -Xmx1024m</argLine>
 					<excludes>
 						<exclude>**/jersey/box/ServiceRelayTest.java</exclude>
 						<exclude>**/jersey/AcceptEncodingTest.java</exclude>
@@ -528,7 +528,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.21.0</version>
+				<version>2.19.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
